[package]
name = "anng"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = [
    "Jon Gjengset <jon.gjengset@helsing.ai>",
    "Felix Obenhuber <felix.obenhuber@helsing.ai>",
]

description = "Safe, async bindings to nanomsg next-generation (NNG)"
keywords = ["nanomsg", "nng", "transport"]
categories = ["api-bindings", "network-programming", "asynchronous"]

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.47.1", features = ["sync", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
lazy_static = { version = "1.5.0", optional = true }

[dependencies.nng-sys]
version = "0.3.0"
path = "../nng-sys"
default-features = false

[features]
default = ["tokio"]
tokio = ["tokio/rt-multi-thread"]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
lexopt = "0.3"
