[package]
name = "anng"
version = "0.2.0-v2pre.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = [
    "Jon Gjengset <jon.gjengset@helsing.ai>",
    "Felix Obenhuber <felix.obenhuber@helsing.ai>",
]
repository = "https://github.com/nanomsg/nng-rs"
rust-version = "1.85.0" # Waker::noop

description = "Safe, async bindings to nanomsg next-generation (NNG)"
keywords = ["nanomsg", "nng", "transport"]
categories = ["api-bindings", "network-programming", "asynchronous"]

[dependencies]
bytes = "1.10.1"
# TODO: remove `rt` feature from here once
# https://github.com/nanomsg/nng/pull/2163 lands and we can get rid of our one
# call to `spawn_blocking`.
tokio = { version = "1.47.1", features = ["sync", "rt"] }
tracing = "0.1.41"

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
lazy_static = { version = "1.5.0", optional = true }

[dependencies.nng-sys]
version = "0.4.0-v2pre.2"
path = "../nng-sys"
default-features = false
features = ["std"]

[features]
default = ["tokio", "vendored"]
vendored = ["nng-sys/vendored"]
tokio = ["tokio/rt-multi-thread"]

[dev-dependencies]
lexopt = "0.3"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"
