[package]
name = "nng"
version = "1.0.1"
authors = ["Nathan Kent <nate@nkent.net>"]

description = "A safe wrapper for NNG (Nanomsg v2)"
repository = "https://gitlab.com/neachdainn/nng-rs"
readme = "README.md"

keywords = ["nng", "nanomsg", "zeromq", "zmq"]
categories = ["api-bindings", "network-programming"]
license = "MIT"

edition = "2018"

[badges]
gitlab = { repository = "neachdainn/nng-rs", branch = "master" }

[features]
default = ["vendored"]
vendored = ["nng-sys/vendored"]
# Legacy alias for backwards compatibility (deprecated)
build-nng = ["vendored"]
ffi-module = []

[dependencies]
log = "0.4.28"

[dependencies.nng-sys]
version = "0.3.0"
# TODO(flxo): use path dependency once nng is updated to use nng-sys v0.4
# path = "../nng-sys"
default-features = false
