[package]
name = "nng"
version = "2.0.0-rc.1"
license = "MIT"
authors = ["Nathan Kent <nate@nkent.net>"]
repository = "https://github.com/nanomsg/nng-rs"

description = "Safe bindings to nanomsg next-generation (NNG)"
keywords = ["nng", "nanomsg", "zeromq", "zmq", "transport"]
categories = ["api-bindings", "network-programming"]

edition = "2024"
rust-version = "1.85.0"

[features]
vendored = ["nng-sys/vendored"]

[dependencies.nng-sys]
version = "0.4.0-v2pre.2"
path = "../nng-sys"
default-features = false
features = ["std"]
